gcp vm deployment setup
Co-Authored-By: Claude <noreply@anthropic.com>